--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="camera">Camera</string>
     <string name="id">ID</string>
     <string name="inProgress">НАХОДИТСЯ В РАЗРАБОТКЕ</string>
+    <string name="clearAcc">Выйти из аккаунта</string>
 </resources>
