little changes in SettingsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="id">ID</string>
     <string name="inProgress">НАХОДИТСЯ В РАЗРАБОТКЕ</string>
     <string name="clearAcc">Выйти из аккаунта</string>
+    <string name="change_name">Сменить никнейм</string>
 </resources>
